# mOS-networking-stack

./: .end-template.conf  .gitmodules  .standalone-template.conf  .travis.yml  LICENSE  Makefile.test  README.md  VERSION  setup.sh
core/include/: mos_api.h  mtcp_api.h  mtcp_epoll.h  mtcp_util.h
core/src/: Makefile.in  addr_pool.c  api.c  arp.c  config.c  core.c  cpu.c  debug.c  dpdk_module.c  dpdkr_module.c  eth_in.c  eth_out.c  event_callback.c  eventpoll.c  icmp.c  ip_in.c  ip_out.c  key_value_store.c  memory_mgt.c  mos_api.c  netmap_module.c  pcap_module.c  pipe.c  psio_module.c  rss.c  scalable_event.c  socket.c  tcp.c  tcp_in.c  tcp_out.c  tcp_rb.c  tcp_ring_buffer.c  tcp_send_buffer.c  tcp_stream.c  timer.c  util.c
core/src/bpf/: Makefile  main.c  sf_bpf_filter.c  sf_gencode.c  sf_grammar.c  sf_nametoaddr.c  sf_optimize.c  sf_scanner.c
core/src/include/: addr_pool.h  arp.h  config.h  debug.h  eth_in.h  eth_out.h  event_callback.h  eventpoll.h  fhash.h  icmp.h  io_module.h  ip_in.h  ip_out.h  key_value_store.h  mos_api.h  mtcp.h  mtcp_api.h  mtcp_epoll.h  mtcp_util.h  proxy_tcp.h  scalable_event.h  socket.h  stat.h  tcp.h  tcp_in.h  tcp_out.h  tcp_rb.h  tcp_ring_buffer.h  tcp_send_buffer.h  tcp_stream.h  timer.h  tree.h  util.h
core/src/include/bpf/: gencode.h  sfbpf.h  tokdefs.h
core/test/event_callback/: Makefile  test.c
core/test/scalable_event/: Makefile  profile.h  test.c
core/test/tcprb/: Makefile  test.c
core/test/tree/: Makefile  test.c
docs/: Makefile.template
docs/html/: mtcp_accept.html  mtcp_alloc_event.html  mtcp_bind.html  mtcp_bind_monitor_filter.html  mtcp_close.html  mtcp_connect.html  mtcp_core_affinitize.html  mtcp_create_context.html  mtcp_define_event.html  mtcp_destroy.html  mtcp_destroy_context.html  mtcp_get_uctx.html  mtcp_getconf.html  mtcp_getlastpkt.html  mtcp_getpeername.html  mtcp_getsockname.html  mtcp_getsockopt.html  mtcp_init.html  mtcp_init_rss.html  mtcp_ioctl.html  mtcp_listen.html  mtcp_peek.html  mtcp_ppeek.html  mtcp_raise_event.html  mtcp_read.html  mtcp_recv.html  mtcp_register_callback.html  mtcp_sendpkt.html  mtcp_set_uctx.html  mtcp_setconf.html  mtcp_setlastpkt.html  mtcp_setsockopt.html  mtcp_settimer.html  mtcp_socket.html  mtcp_write.html
docs/man/: mtcp_accept  mtcp_alloc_event  mtcp_bind  mtcp_bind_monitor_filter  mtcp_close  mtcp_connect  mtcp_core_affinitize  mtcp_create_context  mtcp_define_event  mtcp_destroy  mtcp_destroy_context  mtcp_get_uctx  mtcp_getconf  mtcp_getlastpkt  mtcp_getpeername  mtcp_getsockname  mtcp_getsockopt  mtcp_init  mtcp_init_rss  mtcp_ioctl  mtcp_listen  mtcp_peek  mtcp_ppeek  mtcp_raise_event  mtcp_read  mtcp_recv  mtcp_register_callback  mtcp_sendpkt  mtcp_set_uctx  mtcp_setconf  mtcp_setlastpkt  mtcp_setsockopt  mtcp_settimer  mtcp_socket  mtcp_write
drivers/dpdk-16.04/include/dpdk/: rte_config.h
drivers/dpdk-16.04/mk/: rte.app.mk
drivers/dpdk-17.08/include/dpdk/: cflags.txt
drivers/dpdk-17.08/lib/: ldflags.txt
drivers/dpdk-2.2.0/lib/: ldflags.txt
drivers/dpdk-2.2.0/mk/: rte.app.mk
samples/common/: applib.c  applib.h
samples/epserver/: Makefile.in  epserver-mp.c  epserver.c
samples/epserver/config/: epserver.conf
samples/epwget/: Makefile.in  epwget-mp.c  epwget.c
samples/epwget/config/: epwget.conf
samples/lighttpd-1.4.32/: INSTALL  Makefile.in  config.h.in  configure  configure.ac
samples/lighttpd-1.4.32/doc/: Makefile.in
samples/lighttpd-1.4.32/src/: Makefile.in  connections.c  fdevent_libmtcp.c  server.c
samples/lighttpd-1.4.32/tests/: Makefile.in
samples/midstat/: Makefile.in  README  midstat.c
samples/nat/: Makefile.in  nat.c
samples/nat/config/: nat.conf
samples/simple_firewall/: Makefile.in  simple_firewall.c
samples/simple_firewall/config/: simple_firewall.conf
scripts/: Makefile.test  aclocal.m4  configure  configure.ac
util/: http_parsing.c  rss.c
util/include/: http_parsing.h
(+33 files in other folders)
